<resources>
    <string name="app_name">SharedPreferencesLoginScreen</string>
    <string name="title">Hi, Welcome Back!</string>
    <string name="email">Email</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="orWith">Or With</string>
    <string name="loginWithFB">Login With Facebook</string>
    <string name="loginWithGG">Login With Google</string>
    <string name="signUp">Don\'t have an acount ? Sign up</string>
    <string name="signUpScreen">Sign Up</string>
    <string name="confirmPassword">Confirm your password</string>
    <string name="alreadyHaveAnAccount">Already have an account? Login</string>
    <string name="logout">Log Out</string>
</resources>