<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_waving_hand"
        app:layout_constraintBottom_toBottomOf="@id/tv_Title"
        app:layout_constraintLeft_toRightOf="@id/tv_Title"
        app:layout_constraintTop_toTopOf="@id/tv_Title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_Title"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_email"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_email_sign_up"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/hint_password"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rememberMe"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_up"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textColor="@color/red"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@id/cb_remember"
        app:layout_constraintEnd_toEndOf="@id/et_password_sign_up"
        app:layout_constraintStart_toEndOf="@id/cb_remember"
        app:layout_constraintTop_toTopOf="@id/cb_remember"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button_login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/cb_remember"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/ll_or_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/bt_login"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/orWith"
            android:textSize="20dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#000" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_login_fb"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_loginfb"
        android:gravity="center"
        android:text="@string/loginWithFB"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ll_or_with"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_FB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="@id/edt_login_fb"
        app:layout_constraintStart_toStartOf="@id/edt_login_fb"
        app:layout_constraintTop_toTopOf="@id/edt_login_fb"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edt_login_gg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_login_gg"
        android:gravity="center"
        android:text="@string/loginWithGG"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_login_fb"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/iv_gg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@drawable/ic_google"
        app:layout_constraintBottom_toBottomOf="@id/edt_login_gg"
        app:layout_constraintStart_toStartOf="@id/edt_login_gg"
        app:layout_constraintTop_toTopOf="@id/edt_login_gg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/signUp"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edt_login_gg"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
